Finish women of 2020 graphic

--- a/women_of_2020/women.Rmd
+++ b/women_of_2020/women.Rmd
@@ -265,75 +265,4 @@ ggraph(women_graph, layout = 'circlepack') +
   coord_fixed()
 ```
 
-
-That's a nice graph showing not only levels, but whether the person is an activist (gold). For simplicity, I didn't make 'activist' an aesthetic. Now, maybe it would be interesting to make an activist layer after all, so the circles would nest well. 
-
-```{r}
-women_graph_lvl1 <- data.frame(
-  name = "BBC 100 Women",
-  level = 1,
-  category = NA,
-  activist = NA
-)
-
-women_graph_lvl2 <- women %>% 
-  select(name = category) %>% unique() %>% 
-  mutate(level = 2, category = NA, activist = NA)
-  
-women_graph_lvl3 <- women %>% 
-  filter(!grepl("activist", role, ignore.case = TRUE)) %>% 
-  select(name, category) %>% 
-  rbind(data.frame(name = "Activist", category = NA)) %>% 
-  mutate(level = 3, activist = FALSE)
-
-women_graph_lvl4 <- women %>% 
-  filter(grepl("activist", role, ignore.case = TRUE)) %>% 
-  select(name, category) %>% 
-  mutate(level = 4, activist = TRUE)
-  
-
-women_graph_vertices <- rbind(women_graph_lvl1, 
-                              women_graph_lvl2, 
-                              women_graph_lvl3,
-                              women_graph_lvl4)
-
-women_graph_activist_lyr <- women %>% 
-  filter(grepl("activist", role, ignore.case = TRUE)) %>% 
-  select(to = name) %>% 
-  mutate(from = "Activist") %>% 
-  unique()
-
-women_graph_df <- women %>% 
-  mutate(from = "BBC 100 Women") %>% 
-  select(from, to = category) %>% 
-  unique() %>% 
-  mutate(role = NA) %>% 
-  rbind(select(women, from = category, to = name, role)) %>% 
-  mutate(
-    to = case_when(
-      grepl("activist", role, ignore.case = TRUE) ~ "Activist",
-      TRUE ~ to
-    )
-  ) %>%
-  select(from, to) %>%
-  rbind(women_graph_activist_lyr)
-
-
-
-
-
-women_graph <- graph_from_data_frame(
-  d = women_graph_df,
-  vertices = women_graph_vertices,
-)
-```
-
-
-
-```{r}
-ggraph(women_graph, layout = 'circlepack') + 
-  geom_node_circle()
-```
-
-I'm getting a multiple parent error. Some end point has more than one parent. I think it doesn't like the nesting of the 'activist' layer. The 'activist' groupings have multiple parents -- ah. I need to differentiate between the different 'activist' types. I can append the name I guess. This is getting pretty hairy; I'm not liking it too much. Maybe it's time for a redesign. I'm moving into an R file. 
-
+I've gone through many variations, and I've chosen one similar to the purple image on my inspiration board. 
